[package]
name = "format-conv"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.68"
serde = { version = "1.0.197", features = ["derive"] }
serde-lexpr = "0.1.3"
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.114"
serde_qs = "0.12.0"
serde_yaml = "0.9.32"
toml = "0.8.10"
wasm-bindgen = "0.2.91"
